Archive2/e0/0730446428c58a/output
main.cpp: In function 'std::array<const char*, 4ul> Get4(const char*)':
main.cpp:22:12: error: 'make_array' is not a member of 'std'
     return std::make_array( data, nullptr, nullptr, nullptr );
            ^
main.cpp:23:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
